# SRIB

./: .gitignore  KAGGLE_RUN.md  LOCAL_RUN.md  README.md  blueprint.tex  complete_details.md  fallback.md  problem_statements.md
BlueprintPPT/: AX_Hackathon_Phase1_Blueprint_FILLED.pptx  AX_Hackathon_Phase1_Blueprint_Template.pptx  BLUEPRINT_CONTENT.md  build_blueprint.py
MDFiles/: 1.MD  2.MD  3.MD
code/: .gitignore  README.md  pyproject.toml
code/configs/: pilot_p0_baseline.yaml  pilot_p1_pcen_ablation.yaml  pilot_p1c_babble.yaml  pilot_p2_film_toy.yaml  pilot_p2_wide_clean.yaml  pilot_p3_wavlm_distill.yaml  pilot_smoke.yaml
code/scripts/: babble_sweep.py  conditions_missing_p1a_logmel.csv  conditions_missing_p1a_pcen_on.csv  conditions_missing_p1b_logmel_clean.csv  conditions_missing_p1b_pcen_on_clean.csv  conditions_p1a_pcen_on.csv  conditions_p1a_pcen_on_cpu.csv  custom_word_poc.py  deploy_benchmark.py  download_musan_small.sh  download_rirs_small.sh  download_sc_v2.sh  eval_conditions.py  film_poc.py  film_poc_v2.py  film_poc_v3.py  film_poc_v4.py  film_v2_diagnostic.py  listen_gallery.py  musan_sweep.py  wavlm_distill.py
code/src/: train.py
code/src/data/: __init__.py  augment.py  speech_commands.py
code/src/losses/: __init__.py  focal.py
code/src/model/: __init__.py  bc_resnet.py  heads.py  pcen.py
code/src/utils/: __init__.py  logging.py
code/tests/: test_shapes.py
illustrations/: 10_custom_word.py  12_babble_robustness.py  1_architecture.d2  2_distillation.d2  3_far_in_loop.mmd  4_timeline.mmd  5_enrollment_runtime.mmd  6_param_budget.py  (+3 more)
(+20 files in other folders)
